<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    <item
        android:id="@+id/homeMenu"
        android:icon="@drawable/system_home_icon"
        android:title="@string/home"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_book"
        android:title="@string/search_a_flight" />
    <item
        android:id="@+id/menu_log_in"
        android:title="@string/log_in" />
    <item
        android:id="@+id/menu_log_out"
        android:title="@string/log_out" />
    <item
        android:id="@+id/menu_share"
        android:title="@string/share" />

    <item
        android:id="@+id/menu_contact"
        android:title="@string/contact_us">


    </item>


</menu>
